package com.utaste.data.model;
public enum Role { ADMINISTRATOR, CHEF, WAITER }
